--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
+@import "~react-image-gallery/styles/css/image-gallery.css";
+
+
+h1 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input, textarea {
+  max-width: 25vw;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+img {
+  width: 200px;
+  height: 200px;
+  object-fit: fill;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.product{
+  box-shadow: 0px 0px 20px lightgrey;
+  margin: 1em 0em;
+  border-radius: 20px;
+  padding: 2em;
 }
